# music-llm-lightning

./: .gitignore  infer.py  pyproject.toml  readme.md  train.py
config/: default.yaml  mistral_toy.yaml
mllm/common_utils/: config_utils.py  scheduler.py
mllm/common_utils/audio_utils/: __init__.py  audio_io.py
mllm/models/: model_setup.py  trainer.py
mllm/models/data/: pl_modules.py  pt_dataset.py
mllm/modules/adapter/: __init__.py  linear.py  mlp.py  q_former.py
mllm/modules/audio_encoder/: __init__.py  clap.py  mel_spec.py
mllm/preprocessing/: song_describer.py
scripts/: fetch_data.sh
