[project]
name = "mllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.2.0",
    "einops>=0.8.1",
    "librosa>=0.11.0",
    "lightning>=2.5.5",
    "omegaconf>=2.3.0",
    "peft>=0.17.1",
    "resampy>=0.4.3",
    "soundfile>=0.13.1",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.57.1",
]

[tool.setuptools]
packages = ["mllm"]
